--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-scripts": "3.0.1",
+    "ts-optchain": "^0.1.7",
     "tslint": "^5.18.0",
     "tslint-config-airbnb": "^5.11.1",
     "typescript": "3.5.2"
