--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@types/node": "12.0.10",
     "@types/react": "16.8.22",
     "@types/react-dom": "16.8.4",
+    "@types/uuid": "^3.4.5",
     "autobind-decorator": "^2.4.0",
     "mapbox-gl": "^1.0.0",
     "node-sass": "^4.12.0",
@@ -17,7 +18,8 @@
     "ts-optchain": "^0.1.7",
     "tslint": "^5.18.0",
     "tslint-config-airbnb": "^5.11.1",
-    "typescript": "3.5.2"
+    "typescript": "3.5.2",
+    "uuid": "^3.3.2"
   },
   "scripts": {
     "start": "react-scripts start",
