--- a/package.json
+++ b/package.json
@@ -4,12 +4,14 @@
   "private": true,
   "dependencies": {
     "@types/jest": "24.0.15",
+    "@types/lodash": "^4.14.136",
     "@types/mapbox-gl": "^0.51.8",
     "@types/node": "12.0.10",
     "@types/react": "16.8.22",
     "@types/react-dom": "16.8.4",
     "@types/uuid": "^3.4.5",
     "autobind-decorator": "^2.4.0",
+    "lodash": "^4.17.14",
     "mapbox-gl": "^1.0.0",
     "node-sass": "^4.12.0",
     "react": "^16.8.6",
