--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+	"upsource": "~/Documents/Work/upsource/bin/upsource.sh start"
   },
   "eslintConfig": {
     "extends": "react-app"
