--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "@types/react-dom": "16.8.4",
     "@types/uuid": "^3.4.5",
     "autobind-decorator": "^2.4.0",
+    "axios": "^0.19.0",
+    "express": "^4.17.1",
     "lodash": "^4.17.14",
     "mapbox-gl": "^1.0.0",
     "node-sass": "^4.12.0",
@@ -28,7 +30,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-	"upsource": "~/Documents/Work/upsource/bin/upsource.sh start"
+    "upsource": "~/Documents/Work/upsource/bin/upsource.sh start"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -44,5 +46,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+	"proxy": "http://localhost:8080"
 }
