--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@types/node": "12.0.10",
     "@types/react": "16.8.22",
     "@types/react-dom": "16.8.4",
+    "@types/react-redux": "^7.1.1",
     "@types/uuid": "^3.4.5",
     "autobind-decorator": "^2.4.0",
     "axios": "^0.19.0",
@@ -18,7 +19,9 @@
     "node-sass": "^4.12.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-redux": "^7.1.0",
     "react-scripts": "3.0.1",
+    "redux": "^4.0.4",
     "ts-optchain": "^0.1.7",
     "tslint": "^5.18.0",
     "tslint-config-airbnb": "^5.11.1",
@@ -47,5 +50,5 @@
       "last 1 safari version"
     ]
   },
-	"proxy": "http://localhost:8080"
+  "proxy": "http://localhost:8080"
 }
