pure selectors and reselect.js

--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-redux": "^7.1.0",
     "react-scripts": "3.0.1",
     "redux": "^4.0.4",
+    "reselect": "^4.0.0",
     "ts-optchain": "^0.1.7",
     "tslint": "^5.18.0",
     "tslint-config-airbnb": "^5.11.1",
