--- a/package.json
+++ b/package.json
@@ -30,11 +30,12 @@
     "uuid": "^3.3.2"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "upsource": "~/Documents/Work/upsource/bin/upsource.sh start"
+	"server": "node ./server/server.js",
+	"start": "react-scripts start",
+	"build": "react-scripts build",
+	"test": "react-scripts test",
+	"eject": "react-scripts eject",
+	"upsource": "~/Documents/Work/upsource/bin/upsource.sh start"
   },
   "eslintConfig": {
     "extends": "react-app"
