--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/react-dom": "16.8.4",
     "@types/react-redux": "^7.1.1",
     "@types/uuid": "^3.4.5",
+    "array-flat-polyfill": "^1.0.1",
     "autobind-decorator": "^2.4.0",
     "axios": "^0.19.0",
     "express": "^4.17.1",
@@ -30,12 +31,12 @@
     "uuid": "^3.3.2"
   },
   "scripts": {
-	"server": "node ./server/server.js",
-	"start": "react-scripts start",
-	"build": "react-scripts build",
-	"test": "react-scripts test",
-	"eject": "react-scripts eject",
-	"upsource": "~/Documents/Work/upsource/bin/upsource.sh start"
+    "server": "node ./server/server.js",
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject",
+    "upsource": "~/Documents/Work/upsource/bin/upsource.sh start"
   },
   "eslintConfig": {
     "extends": "react-app"
