--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-redux": "^7.1.0",
     "react-scripts": "3.0.1",
     "redux": "^4.0.4",
+    "redux-batched-actions": "^0.4.1",
     "reselect": "^4.0.0",
     "ts-optchain": "^0.1.7",
     "tslint": "^5.18.0",
