--- a/package.json
+++ b/package.json
@@ -61,5 +61,6 @@
 			"last 1 safari version"
 		]
 	},
-	"proxy": "https://localhost:8080"
+	"proxy": "https://localhost:8080",
+	"homepage": "http://localhost:3000/lite"
 }
