--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,25 +1,26 @@
 {
 	"compilerOptions": {
-		"experimentalDecorators": true,
+		"jsx": "preserve",
+		"module": "esnext",
 		"target": "es5",
+		"noEmit": true,
+		"strict": true,
+		"allowJs": true,
+		"baseUrl": "./packages",
+		"incremental": true,
+		"skipLibCheck": true,
+		"isolatedModules": true,
+		"moduleResolution": "node",
+		"esModuleInterop": true,
+		"resolveJsonModule": true,
+		"experimentalDecorators": true,
+		"allowSyntheticDefaultImports": true,
+		"forceConsistentCasingInFileNames": true,
 		"lib": [
 			"dom",
 			"dom.iterable",
 			"esnext"
 		],
-		"allowJs": true,
-		"skipLibCheck": true,
-		"esModuleInterop": true,
-		"allowSyntheticDefaultImports": true,
-		"strict": true,
-		"forceConsistentCasingInFileNames": true,
-		"module": "esnext",
-		"moduleResolution": "node",
-		"resolveJsonModule": true,
-		"isolatedModules": true,
-		"noEmit": true,
-		"jsx": "preserve",
-		"baseUrl": "./packages",
 		"paths": {
 			"lite/*": ["lite/src/*"],
 			"portal/*": ["portal/src/*"]
